--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.1'
 
 services:
-  springboot:
+  springapp:
     image: haseebdevops/springboot-app-docker:latest
     restart: always # This will be ignored if we deploy in docker swarm
     environment:
